# cxxRecipes

./: CMakeLists.txt  READM.md  Understanding and Using C Pointers
alignment/: CMakeLists.txt  alignment.cpp  alignment.hpp  test_alignment.cpp
bitManipulation/: CMakeLists.txt  bitManipulation.cpp  bitManipulation.hpp  smartPointers.cpp  test_bitManipulation.cpp
designPatterns/: CMakeLists.txt  singleton.hpp
numerical/: CMakeLists.txt  floating.hpp  test_floating.cpp
performance/: CMakeLists.txt  typeConversion.cpp
smartPointers/: CMakeLists.txt  smartPointers.hpp  test_smartPointers.cpp
threading/: CMakeLists.txt  test_threading.cpp  threading.hpp
